--- a/Project-2/CSS/style.css
+++ b/Project-2/CSS/style.css
@@ -119,6 +119,12 @@ html{
 .h-primary{
     font-size: 3.8rem;
     padding: 12px;
+    transition: all 0.9s ease-out 0.2s;
+}
+
+.h-primary:hover{
+    font-size: 4.8rem;
+    padding: 12px;
 }
 
 .h-secondary{
@@ -128,6 +134,12 @@ html{
 
 .center{
     text-align: center;
+    transition: all 0.3s ease 0.3s;
+}
+
+.center:hover{
+    text-align: center;
+    font-size: 1.2rem;
 }
 
 .btn{
@@ -138,11 +150,15 @@ html{
     border-radius: 10px;
     font-size: 1rem;
     cursor: pointer;
+    transition: all 0.3s ease-in 0.2s;
 }
 
 .btn:hover{
     background-color: #FFFFCC;
     color: black;
+    margin: 20px 20px;
+    padding: 6px 17px;
+    font-size: 1.2rem;
 }
 
 /* Services Section */
@@ -157,9 +173,10 @@ html{
     /* display: flex; */
     border: 2.5px solid yellow;
     border-radius: 10px;
-    margin: -70px 12px;
+    margin: -70px 12px; 
     padding: 22px 23px;
     background-color: #FFFFCC;
+    transition: all 2s ease 0.3s;
 }
 
 #services .box img{
