--- a/Project-2/CSS/phone.css
+++ b/Project-2/CSS/phone.css
@@ -43,6 +43,11 @@
     padding: 4px 8px;
 }
 
+.btn:hover{
+    margin: 10px 10px;
+    padding: 2px 2px;
+}
+
 /* Services Section */
 #services{
     flex-direction: column;
