--- a/Project-4(Zomato_Webpage)/zomato.css
+++ b/Project-4(Zomato_Webpage)/zomato.css
@@ -12,31 +12,43 @@ html{
 
 /* Header */
 
-#navbar{
+header{
     /* background-color: black; */
+    margin: 2px 2px;
+    padding: 2px 2px;
 }
 
-#navbar::before{
+header::before{
+    background: url('home.avif') no-repeat center center/cover;
     content: "";
-    background-color: black;
     position: absolute;
     top: 0;
     left: 0;
-    height: 76%;
     width: 100%;
+    height: 525px;
     z-index: -1;
     opacity: 1;
 }
 
 #navbar ul{
     display: flex;
+    margin: 0px 0px;
+    padding: 0px 0px;
+    align-items: center;
+    opacity: 1;
+    height: 100%;
+    width: 100%;
+}
+
+/* #navbar #_ul1{
     margin: 2px 2px;
     padding: 2px 36px;
     justify-content: flex-start;
     align-items: center;
     opacity: 1;
+    height: 100%;
     width: 100%;
-}
+} */
 
 #navbar ul li{
     margin: 2px 2px;
@@ -46,9 +58,9 @@ html{
 
 #navbar ul li a{
     margin: 2px 2px;
-    padding: 2px 40px;
+    padding: 2px 18px;
     text-decoration: none;
-    font-size: 1.4rem;
+    font-size: 1rem;
     color: white;
 }
 
@@ -65,15 +77,8 @@ html{
     align-items: center;
 }
 
-#home::before{
-    content: "";
-    
-    z-index: -1;
-    opacity: 0.4;
-}
-
 #home h1{
-    font-size: 6rem;
+    font-size: 5rem;
     color: white;
 }
 
@@ -87,27 +92,56 @@ html{
     font-weight: bold;
 }
 
+/* more */
+
+#more{
+    display: flex;
+    flex-direction: column;
+}
+
 .boxes{
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     border: 0.1rem solid red;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px 10px;
-    margin: 33px 51px;
-    padding: 39px 90px;
+    /* grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, MinMax(100px, 1fr)); */
+    position: relative;
+    gap: 10px 40px;
+    margin: 20px 75px;
+    padding: 34px 105px;
 }
 
 .box{
-    border: 0.1rem solid red;
+    border: 0.02rem solid #d9d9d9;
+    border-radius: 1rem;
+    transition: all 2s ease-in-out 1s;
 }
 
-header::before{
-    background: url('home.avif') no-repeat center center/cover;
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    opacity: 0.3;
+.box p{
+    /* border: 0.1rem solid red; */
+    text-align: center;
+    font-weight: bold;
+    margin: 0px 0px;
+    padding: 10px 2px;
+}
+
+.boxes img{
+    /* display: grid; */
+    /* grid-template-columns: repeat(1, 1fr); */
+    /* grid-template-columns: repeat(auto-fit, MinMax(100px, 1fr)); */
+    /* border: 0.1rem solid red; */
+    height: 12rem;
+    width: 16rem;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+}
+
+.boxes img:hover{
+    height: 12.3rem;
+    width: 16.3rem;
+}
+
+._anchor{
+    text-decoration: none;
+    color: black;
 }
