--- a/Frontend/Project-4(Zomato_Webpage)/zomato.css
+++ b/Frontend/Project-4(Zomato_Webpage)/zomato.css
@@ -201,61 +201,17 @@ header::before{
         padding: 34px 105px;
 }
 
-.coll_box h2{
+.p_h6{
     border: 0.1rem solid red;
     margin: 2px;
     padding: 2px;
     color: white;
+    font-size: 1.6rem;
+    /* position: absolute; */
+    bottom: 0px;
 }
 
-.coll_box-1::before{
-    content: "";
-    background: url('box1.webp') no-repeat center center/cover;
-    position: absolute;
-    left: 0;
-    width: 362px;
-    height: 300px;
-    z-index: -1;
-    opacity: 0.9;
-}
-
-.coll_box-2::before{
-    content: "";
-    background: url('box2.webp') no-repeat center center/cover;
-    position: absolute;
-    /* left: 0; */
-    width: 362px;
-    height: 300px;
-    z-index: -1;
-    opacity: 0.9;
-}
-
-.coll_box-3::before{
-    content: "";
-    background: url('box3.webp') no-repeat center center/cover;
-    position: absolute;
-    /* left: 0; */
-    width: 362px;
-    height: 300px;
-    z-index: -1;
-    opacity: 0.9;
-}
-
-.coll_box-4::before{
-    content: "";
-    background: url('box4.webp') no-repeat center center/cover;
-    position: absolute;
-    /* left: 0; */
-    width: 362px;
-    height: 300px;
-    z-index: -1;
-    opacity: 0.9;
-}
-
-.coll_box img{
-    border: 0.1rem solid red;
-    margin: 2px;
-    padding: 2px;
-    height: 12rem;
-    width: 16rem;
+.ima_ge img{
+    height: 10rem;
+    width: 10rem;
 }
